# SPDX-FileCopyrightText: 2025 Max Mehl <https://mehl.mx>
#
# SPDX-License-Identifier: Apache-2.0

[project]
name = "ansible-vault-tools"
version = "0.2.0"
description = "Simple library and CLI tool to deal with ansible vaults and encrypted strings"
authors = [{ name = "Max Mehl", email = "mail@mehl.mx" }]
requires-python = ">=3.11"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = []

[project.optional-dependencies]
ansible-deps = ["ansible", "ansible-vault"]

[project.scripts]
ansible-vault-tools = "ansible_vault_tools.main:_cli"

[dependency-groups]
dev = [
  "ruff>=0.15.10",
  "ty>=0.0.29",
  "pytest>=9.0.3,<10",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-name = ["ansible_vault_tools"]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"


# FORMATTING and LINTING settings
[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "T",
  "FBT",
  "LOG015",
  "COM812",
  "ERA001",
  "S310",
  "D205",
  "D212",
  "PTH123",
]
[tool.ruff.lint.extend-per-file-ignores]
"tests/*" = ["S101", "PLR", "PT011", "ANN001"]
[tool.ruff.lint.pydocstyle]
convention = "google"

# TY settings
[tool.ty.src]
include = ["ansible_vault_tools"]
